unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Interest_Segment__c</fullName>
        <inlineHelpText>Source: Moldev (Line of Business), SCIEX (MarketVertical, PrimaryApplication), IDBS (None), Leica (Application of Interest) &amp; Beckman (Application Interest, Application Interest List, Application Interest Segment)</inlineHelpText>
        <label>Application Interest Segment</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BEC - Air Particle Counting</fullName>
                </value>
                <value>
                    <fullName>BEC - Antibodies</fullName>
                </value>
                <value>
                    <fullName>BEC - Assay Development</fullName>
                </value>
                <value>
                    <fullName>BEC - Bioproduction</fullName>
                </value>
                <value>
                    <fullName>BEC - Blood processing</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell Cycle</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell Imaging</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell line production</fullName>
                </value>
                <value>
                    <fullName>BEC - Cells</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell Signalling/Phospho</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell size/volume</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell Sorting</fullName>
                </value>
                <value>
                    <fullName>BEC - Cellular</fullName>
                </value>
                <value>
                    <fullName>BEC - Cellular Therapy</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell Viability</fullName>
                </value>
                <value>
                    <fullName>BEC - Chemistry and Materials</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical Flow</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical Research</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical Research Flow</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical Trials</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical Trials Flow</fullName>
                </value>
                <value>
                    <fullName>BEC - Compound Management</fullName>
                </value>
                <value>
                    <fullName>BEC - CTCs</fullName>
                </value>
                <value>
                    <fullName>BEC - DNA Purification - blood</fullName>
                </value>
                <value>
                    <fullName>BEC - DNA Purification - cells / tissues</fullName>
                </value>
                <value>
                    <fullName>BEC - DNA Purification - FFPE</fullName>
                </value>
                <value>
                    <fullName>BEC - DNA Purification - plant</fullName>
                </value>
                <value>
                    <fullName>BEC - DNA Purification - plasmid</fullName>
                </value>
                <value>
                    <fullName>BEC - Drinking Water</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <inlineHelpText>Source: Moldev (Contact Role, FSE Sales Rep Inside sales), SCIEX (Influence), IDBS (Job Role), Leica (Decision Maker, LeadSource) &amp; Beckman (Persona)</inlineHelpText>
        <label>Contact Role</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MOL - Decision Maker</fullName>
                </value>
                <value>
                    <fullName>MOL - End User</fullName>
                </value>
                <value>
                    <fullName>MOL - Influencer</fullName>
                </value>
                <value>
                    <fullName>MOL - Purchasing Agent</fullName>
                </value>
                <value>
                    <fullName>MOL - Super User</fullName>
                </value>
                <value>
                    <fullName>MOL - Owner</fullName>
                </value>
                <value>
                    <fullName>MOL - Product Champion</fullName>
                </value>
                <value>
                    <fullName>MOL - Key opinion leader (KOL)</fullName>
                </value>
                <value>
                    <fullName>SCI - Field Opinion Leader</fullName>
                </value>
                <value>
                    <fullName>SCI - Account Opinion Leader</fullName>
                </value>
                <value>
                    <fullName>SCI - Decision Maker</fullName>
                </value>
                <value>
                    <fullName>SCI - Influencer</fullName>
                </value>
                <value>
                    <fullName>SCI - Low to Little influence</fullName>
                </value>
                <value>
                    <fullName>SCI - CEO / President / Vice President</fullName>
                </value>
                <value>
                    <fullName>SCI - Director / Deputy Director / Dept Head</fullName>
                </value>
                <value>
                    <fullName>SCI - Purchasing / Procurement</fullName>
                </value>
                <value>
                    <fullName>SCI - Senior Scientist / Group Leader</fullName>
                </value>
                <value>
                    <fullName>SCI - Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>SCI - Lab Manager</fullName>
                </value>
                <value>
                    <fullName>SCI - Project Manager / Technical Lead</fullName>
                </value>
                <value>
                    <fullName>SCI - Scientist</fullName>
                </value>
                <value>
                    <fullName>SCI - Medical Doctor</fullName>
                </value>
                <value>
                    <fullName>SCI - Lab Technician</fullName>
                </value>
                <value>
                    <fullName>SCI - Consultant</fullName>
                </value>
                <value>
                    <fullName>SCI - Sales / Marketing</fullName>
                </value>
                <value>
                    <fullName>SCI - Business Analyst</fullName>
                </value>
                <value>
                    <fullName>SCI - Student / Intern</fullName>
                </value>
                <value>
                    <fullName>BEC - Administrator</fullName>
                </value>
                <value>
                    <fullName>BEC - CEO</fullName>
                </value>
                <value>
                    <fullName>BEC - Consultant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_Out_Date__c</fullName>
        <label>Email Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LinkedIn_URL__c</fullName>
        <label>LinkedIn URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Source__c</fullName>
        <label>Marketing Source</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marketing_Vertical__c</fullName>
        <inlineHelpText>Source: Moldev (None), SCIEX (Sub Vertical), IDBS (Business Segment), Leica (None) &amp; Beckman (Market, Market Segment, Market Segment Detail)</inlineHelpText>
        <label>Marketing Vertical</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SCI - Life Science Research</fullName>
                </value>
                <value>
                    <fullName>SCI - Biopharma</fullName>
                </value>
                <value>
                    <fullName>SCI - Clinical</fullName>
                </value>
                <value>
                    <fullName>SCI - Environmental/Industrial</fullName>
                </value>
                <value>
                    <fullName>SCI - Food/Beverage</fullName>
                </value>
                <value>
                    <fullName>SCI - Forensic</fullName>
                </value>
                <value>
                    <fullName>SCI - Pharma</fullName>
                </value>
                <value>
                    <fullName>SCI - Other</fullName>
                </value>
                <value>
                    <fullName>SCI - All</fullName>
                </value>
                <value>
                    <fullName>LEI - LSR</fullName>
                </value>
                <value>
                    <fullName>LEI - Applied</fullName>
                </value>
                <value>
                    <fullName>LEI - Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>LEI - Microsurgery</fullName>
                </value>
                <value>
                    <fullName>BEC - Academia/Government Research</fullName>
                </value>
                <value>
                    <fullName>BEC - Aerospace</fullName>
                </value>
                <value>
                    <fullName>BEC - Automotive</fullName>
                </value>
                <value>
                    <fullName>BEC - Agriculture</fullName>
                </value>
                <value>
                    <fullName>BEC - Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>BEC - Pharma/Biotechnology</fullName>
                </value>
                <value>
                    <fullName>BEC - Chemicals (Inorg., Organic., Petro.)</fullName>
                </value>
                <value>
                    <fullName>BEC - Contract Research Organizations</fullName>
                </value>
                <value>
                    <fullName>BEC - Hospitals/Medical Centers, Clinical</fullName>
                </value>
                <value>
                    <fullName>BEC - Industrial</fullName>
                </value>
                <value>
                    <fullName>BEC - Government</fullName>
                </value>
                <value>
                    <fullName>BEC - Other</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>SCI - Biopharma - Development</fullName>
                </value>
                <value>
                    <fullName>BEC - Diagnostics</fullName>
                </value>
                <value>
                    <fullName>BEC - Pathology</fullName>
                </value>
                <value>
                    <fullName>BEC - Hospital Pharmacy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_of_Activities__c</fullName>
        <label>No. of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpCo_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OpCo Account</label>
        <referenceTo>OpCo_Account__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OpCo_Contact_ID__c</fullName>
        <label>OpCo Contact ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <label>Phone Ext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BEC - Acoustic Liquid Handling</fullName>
                </value>
                <value>
                    <fullName>BEC - Analytical Ultracentrifugation</fullName>
                </value>
                <value>
                    <fullName>BEC - Automation/Liquid Handling</fullName>
                </value>
                <value>
                    <fullName>BEC - Benchtop/General Purpose Centrifugation</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell Counting/Viability</fullName>
                </value>
                <value>
                    <fullName>BEC - Cell Sorting</fullName>
                </value>
                <value>
                    <fullName>BEC - Centrifugation</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical Flow Analyzer</fullName>
                </value>
                <value>
                    <fullName>BEC - Clinical Flow Reagents</fullName>
                </value>
                <value>
                    <fullName>BEC - Consumables - Echo Plate</fullName>
                </value>
                <value>
                    <fullName>BEC - Consumables - Liquid Handling Tips</fullName>
                </value>
                <value>
                    <fullName>BEC - Consumables - PCC</fullName>
                </value>
                <value>
                    <fullName>BEC - Consumables - Tubes, Bottles, Liners</fullName>
                </value>
                <value>
                    <fullName>BEC - Custom Integration/Build to Suit</fullName>
                </value>
                <value>
                    <fullName>BEC - Flow &amp; Automation</fullName>
                </value>
                <value>
                    <fullName>BEC - Flow Custom Dried Reagents</fullName>
                </value>
                <value>
                    <fullName>BEC - Flow DuraClone Off the Shelf</fullName>
                </value>
                <value>
                    <fullName>BEC - Flow Software</fullName>
                </value>
                <value>
                    <fullName>BEC - Flow Software - Cytobank</fullName>
                </value>
                <value>
                    <fullName>BEC - Flow Software - Kaluza</fullName>
                </value>
                <value>
                    <fullName>BEC - High Capacity Centrifugation</fullName>
                </value>
                <value>
                    <fullName>BEC - High Performance Centrifugation</fullName>
                </value>
                <value>
                    <fullName>BEC - Other</fullName>
                </value>
                <value>
                    <fullName>BEC - Particle Characterization</fullName>
                </value>
                <value>
                    <fullName>BEC - Particle Counting</fullName>
                </value>
                <value>
                    <fullName>BEC - Particle Counting - Air</fullName>
                </value>
                <value>
                    <fullName>BEC - Particle Counting - Liquid</fullName>
                </value>
                <value>
                    <fullName>BEC - Particle Counting - Orbisphere</fullName>
                </value>
                <value>
                    <fullName>BEC - Particle Counting - TOC</fullName>
                </value>
                <value>
                    <fullName>BEC - Research Flow Analyzer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source OpCo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Beckman</fullName>
                </value>
                <value>
                    <fullName>IDBS</fullName>
                </value>
                <value>
                    <fullName>Leica</fullName>
                </value>
                <value>
                    <fullName>Moldev</fullName>
                </value>
                <value>
                    <fullName>SCIEX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Source: Moldev (BT Status), SCIEX (Contact Status), IDBS (Contact Status), Leica (Inactive) &amp; Beckman (Contact Status)</inlineHelpText>
        <label>Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active (Accessible)</fullName>
                    <label>MOL - Active (Accessible)</label>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                    <label>MOL - Duplicate</label>
                </value>
                <value>
                    <fullName>Inactive (Unreachable)</fullName>
                    <label>MOL - Inactive (Unreachable)</label>
                </value>
                <value>
                    <fullName>Junk</fullName>
                    <label>MOL - Junk</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <label>BEC - Contact</label>
                </value>
                <value>
                    <fullName>Inactive (Left Company)</fullName>
                    <label>BEC - Inactive (Left Company)</label>
                </value>
                <value>
                    <fullName>Raw</fullName>
                    <label>BEC - Raw</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <label>BEC - Prospect</label>
                </value>
                <value>
                    <fullName>BEC - Active (Accessible)</fullName>
                </value>
                <value>
                    <fullName>Active (Has Opp)</fullName>
                    <label>SCI - Active (Has Opp)</label>
                </value>
                <value>
                    <fullName>Remove from database</fullName>
                    <label>SCI - Remove from database</label>
                </value>
                <value>
                    <fullName>Available (No Opp)</fullName>
                    <label>SCI - Available (No Opp)</label>
                </value>
                <value>
                    <fullName>Unavailable (Unreachable)</fullName>
                    <label>SCI - Unavailable (Unreachable)</label>
                </value>
                <value>
                    <fullName>No longer w Company</fullName>
                    <label>SCI - No longer w Company</label>
                </value>
                <value>
                    <fullName>IDB - Junk</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                    <label>IDB - Active</label>
                </value>
                <value>
                    <fullName>Engage</fullName>
                    <label>IDB - Engage</label>
                </value>
                <value>
                    <fullName>MEL</fullName>
                    <label>IDB - MEL</label>
                </value>
                <value>
                    <fullName>MQL</fullName>
                    <label>IDB - MQL</label>
                </value>
                <value>
                    <fullName>SAL</fullName>
                    <label>IDB - SAL</label>
                </value>
                <value>
                    <fullName>Re-Market</fullName>
                    <label>IDB - Re-Market</label>
                </value>
                <value>
                    <fullName>Open Opp</fullName>
                    <label>IDB - Open Opp</label>
                </value>
                <value>
                    <fullName>Left Company</fullName>
                    <label>IDB - Left Company</label>
                </value>
                <value>
                    <fullName>Invalid Email</fullName>
                    <label>IDB - Invalid Email</label>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Application_Interest_Segment__c</fullName>
        <label>Sub Application Interest Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Twitter_URL__c</fullName>
        <label>Twitter URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>Source__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OpCo_Account__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Beckman</fullName>
        <columns>FULL_NAME</columns>
        <columns>Source__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OpCo_Account__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Industry__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Beckman</value>
        </filters>
        <label>All Contacts - Beckman</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_IDBS</fullName>
        <columns>FULL_NAME</columns>
        <columns>Source__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OpCo_Account__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Industry__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>IDBS</value>
        </filters>
        <label>All Contacts - IDBS</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Leica</fullName>
        <columns>FULL_NAME</columns>
        <columns>Source__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OpCo_Account__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Industry__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Leica</value>
        </filters>
        <label>All Contacts - Leica</label>
    </listViews>
    <listViews>
        <fullName>All_Contacts_Moldev</fullName>
        <columns>FULL_NAME</columns>
        <columns>Source__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OpCo_Account__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Industry__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>Moldev</value>
        </filters>
        <label>All Contacts - Moldev</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Contacts_SCIEX</fullName>
        <columns>FULL_NAME</columns>
        <columns>Source__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OpCo_Account__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Industry__c</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>SCIEX</value>
        </filters>
        <label>All Contacts - SCIEX</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>